Add npm install to pre-build and build commands in buildspec.yml, fix vite build command in package.json

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,11 +11,13 @@ phases:
   pre_build:
     commands:
       - echo Pre-build steps...
+        npm install
       - npm run build
 
   build:
     commands:
       - echo Building the project...
+        npm install
       - npm run build
 
 artifacts:
