--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,13 +11,12 @@ phases:
   pre_build:
     commands:
       - echo Pre-build steps...
-        npm install
+        npm install -g vite
       - npm run build
 
   build:
     commands:
       - echo Building the project...
-        npm install
       - npm run build
 
 artifacts:
@@ -28,9 +27,6 @@ artifacts:
     - Procfile
     - node_modules/**/*
 
-
 cache:
   paths:
-    - 'node_modules/**/*'
-
-
+    - "node_modules/**/*"
