--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,8 @@ phases:
 
   build:
     commands:
+      - installing vite
+      - npm install -g vite
       - echo Building the project...
       - npm run build
 
